@@ -203,9 +203,9 @@ polygons = {
                          (1, 1), (1, 0), (0, 0), (0, 1) ),
 
     # special arrow symbols
-    '_arrow': ( (0, 0), (-1.8, 1), (-1.4, 0), (-1.8, -1) ),
-    '_arrowtriangle': ( (0, 0), (-1.8, 1), (-1.8, -1) ),
-    '_arrownarrow': ( (0, 0), (-1.8, 0.5), (-1.8, -0.5) ),
+    '_arrow': ( (1.8, 0), (0, 1), (0.4, 0), (0, -1) ),
+    '_arrowtriangle': ( (1.8, 0), (0, 1), (0, -1) ),
+    '_arrownarrow': ( (1.8, 0), (0, 0.5), (0, -0.5) ),
     '_arrowreverse': ( (0, 0), (1.8, 1), (1.4, 0), (1.8, -1) ),
     }
 
